# Agentic-ResumeMatcher

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt  run_app.bat  run_app.py  run_app.sh
docs/: architecture.md  setup.md  usage.md
examples/: api_example.py  cli_example.py
src/: __init__.py  cli.py  main.py
src/agents/: __init__.py  keyword_extractor.py  resume_tailor.py
src/config/: settings.py
src/llm/: __init__.py  base_client.py  bedrock_client.py  openai_client.py
src/tools/: __init__.py  file_reader.py  file_writer.py  parser.py
src/utils/: __init__.py  logger.py  validators.py
templates/: index.html
tests/: __init__.py
tests/fixtures/: sample_job_description.txt  sample_resume.txt
tests/test_agents/: test_keyword_extractor.py
tests/test_tools/: test_file_reader.py
